[Fix] style in endereço and dark mode

--- a/src/pages/buyPage/buy.scss
+++ b/src/pages/buyPage/buy.scss
@@ -298,7 +298,7 @@ main {
             }
         }
 
-        .loadingDelivery {
+        .loadingOrder {
             background-color: #72757478;
             box-shadow: 0 0 15px #141414a8;
         }
