--- a/src/pages/userPage/user.scss
+++ b/src/pages/userPage/user.scss
@@ -31,77 +31,77 @@ $font-items: 'Poppins', Helvetica;
 
     section {
         width: 50%;
-    }
-
-    .userData {
-        width: 100%;
-        padding: 0 2em;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-
-        .user {
+ 
+        .userData {
+            width: 100%;
+            padding: 0 2em;
             display: flex;
             align-items: center;
-            gap: 0.75em;
-            padding: 0.5em 0;
-            font-size: 2rem;
+            justify-content: space-between;
 
-            img {
-                object-fit: contain;
-                border: 1px solid $color-primaryLight;
-                width: 50px;
-                height: 50px;
-                border-radius: 50%;
+            .user {
+                display: flex;
+                align-items: center;
+                gap: 0.75em;
+                padding: 0.5em 0;
+                font-size: 2rem;
+
+                img {
+                    object-fit: contain;
+                    border: 1px solid $color-primaryLight;
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 50%;
+                }
+            }
+
+            .configUser {
+                display: flex;
+                align-items: center;
+                gap: 2em;
+
+                .icon {
+                    height: 38px;
+                    width: 38px;
+                    color: $color-primaryLight;
+                    cursor: pointer;
+                }
             }
         }
 
-        .configUser {
+        .lineUser {
+            width: 100%;
+            height: 0;
+            border: 1.5px solid $color-primaryLight;
+        }
+
+        .updateInfos {
             display: flex;
+            flex-direction: column;
             align-items: center;
             gap: 2em;
+            padding: 2em;
 
-            .icon {
-                height: 38px;
-                width: 38px;
-                color: $color-primaryLight;
-                cursor: pointer;
+            .updateInputs {
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-template-rows: 1fr;
+                gap: 1.5em;
             }
-        }
-    }
 
-    .lineUser {
-        width: 100%;
-        height: 0;
-        border: 1.5px solid $color-primaryLight;
-    }
-
-    .updateInfos {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 2em;
-        padding: 2em;
-
-        .updateInputs {
-            display: grid;
-            grid-template-columns: 1fr;
-            grid-template-rows: 1fr;
-            gap: 1.5em;
-        }
-
-        .containerButtons {
-            display: flex;
-            align-items: center;
-            flex-direction: column-reverse;
-            gap: 1em;
-            width: 100%;
-            justify-content: space-evenly;
-
-            .updateButtons {
+            .containerButtons {
                 display: flex;
-                flex-direction: column;
-                gap: 2em;
+                align-items: center;
+                flex-direction: column-reverse;
+                gap: 1em;
+                width: 100%;
+                justify-content: space-evenly;
+
+                .updateButtons {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 2em;
+                }
             }
         }
     }
@@ -645,10 +645,11 @@ $font-items: 'Poppins', Helvetica;
     }
 }
 
-@media only screen and (max-width: 1300px) {
+@media only screen and (max-width: 1024px) {
     .userContainer {
         width: auto;
         max-width: 90vw;
+        width: 90vw;
         flex-direction: column;
 
         section {
